# sheeppl

./: CMakeLists.txt  README.md  config_r  config_s  test_for_.cpp  test_queue.cpp  test_reduce.cpp
inc/: RabbitClient.h  blocked_container.h  blocked_range.h  communication.h  concurrent_queue.h  configuration.h  parallel_for.h  parallel_reduce.h  pipeline.h  publish.h  sheeppl_stddef.h  utils.h
src/: RabbitClient.cpp  blocked_container.cpp  blocked_range.cpp  communication.cpp  configuration.cpp  parallel_for.cpp  pipeline.cpp  utils.cpp
